// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with just subtitle 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 iQcPbL"
>
  <h2
    class="feature__SubTitle-sc-6swrp6-2 jevVsa"
  >
    Watch anywhere. Cancel anytime.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just title 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 iQcPbL"
>
  <h1
    class="feature__Title-sc-6swrp6-1 klxrsG"
  >
    Unlimited Films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature /> renders the <Feature /> with populated data 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 iQcPbL"
>
  <h1
    class="feature__Title-sc-6swrp6-1 klxrsG"
  >
    Unlimited Films, TV programmes and more.
  </h1>
  <h2
    class="feature__SubTitle-sc-6swrp6-2 jevVsa"
  >
    Watch anywhere. Cancel anytime.
  </h2>
</div>
`;
